EnvironmentSetup/AWS/Source/ingress/was-ingress-awes-service.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: was-ingress-awes
  namespace: was
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/load-balance: "ewma"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: active-web-elements-server
              port:
                number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: was-ingress-endpoints-restart-rollout
  namespace: was
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /restart/kubernetes/active-web-elements-server-deployment
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /\.applicationserver/kernel/restart
          pathType: ImplementationSpecific
          backend:
            service:
              name: endpoint-manager
              port:
                number: 8085
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: was-ingress-awes-info
  namespace: was
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
    nginx.ingress.kubernetes.io/load-balance: "ewma"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /\.applicationserver/(info|kernel/stats)
          pathType: ImplementationSpecific
          backend:
            service:
              name: active-web-elements-server-info
              port:
                number: 8082
