EnvironmentSetup/AWS/Source/ingress/was-ingress-endpoint-manager-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: was-ingress-endpoints
  namespace: was
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /endpoints/$1
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /?endpoints(?:$|/(.*))
          pathType: ImplementationSpecific
          backend:
            service:
              name: endpoint-manager
              port:
                number: 8085
